[gd_scene load_steps=8 format=3 uid="uid://dwnfjs2mstq3w"]

[ext_resource type="Script" path="res://MenuPlayers.gd" id="1_jkkcm"]
[ext_resource type="Texture2D" uid="uid://deyxd5x1km5t6" path="res://fundo.png" id="1_o2w6k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mx27r"]
bg_color = Color(1, 0, 0.129412, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.792157, 0, 0.0941176, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dse21"]
bg_color = Color(0.454902, 0.454902, 0.454902, 1)
corner_detail = 1

[sub_resource type="Theme" id="Theme_nl0wd"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/fonts/font = null
Button/styles/normal = SubResource("StyleBoxFlat_mx27r")
Button/styles/pressed = SubResource("StyleBoxFlat_dse21")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_omx7l"]

[sub_resource type="Theme" id="Theme_crdnb"]

[node name="MenuPlayers" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jkkcm")

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1120.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5
metadata/_edit_lock_ = true

[node name="Fundo" type="Sprite2D" parent="Background"]
position = Vector2(257.25, 127)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="Fundo9" type="Sprite2D" parent="Background"]
top_level = true
position = Vector2(1271, 642)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="Fundo8" type="Sprite2D" parent="Background"]
position = Vector2(764, 642)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="Fundo6" type="Sprite2D" parent="Background"]
position = Vector2(257, 385)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="Fundo5" type="Sprite2D" parent="Background"]
position = Vector2(764, 385)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="Fundo2" type="Sprite2D" parent="Background"]
position = Vector2(764, 127)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="Fundo7" type="Sprite2D" parent="Background"]
show_behind_parent = true
position = Vector2(257, 642)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="Fundo3" type="Sprite2D" parent="Background"]
position = Vector2(1271, 127)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="Fundo4" type="Sprite2D" parent="Background"]
position = Vector2(1271, 385)
scale = Vector2(0.782642, 0.796296)
texture = ExtResource("1_o2w6k")
metadata/_edit_lock_ = true

[node name="2Players" type="Button" parent="Background"]
layout_mode = 2
offset_left = 352.0
offset_top = 168.0
offset_right = 450.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_nl0wd")
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "2 jogadores
"

[node name="3Players" type="Button" parent="Background"]
top_level = true
layout_mode = 2
offset_left = 704.0
offset_top = 168.0
offset_right = 802.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_nl0wd")
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "4 jogadores
"

[node name="4Players" type="Button" parent="Background"]
layout_mode = 2
offset_left = 528.0
offset_top = 168.0
offset_right = 626.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_nl0wd")
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "3 jogadores
"

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 0.0901961, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 13.797
anchor_top = 1.0
anchor_right = 13.797
anchor_bottom = 1.0
offset_left = -551.88
offset_top = 24.0
offset_right = 600.12
offset_bottom = 96.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxTexture_omx7l")
text = "Selecione a quantidade de jogadores:"
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Player1_name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 320.0
offset_right = 723.0
offset_bottom = 376.0
theme = SubResource("Theme_crdnb")
placeholder_text = "Digite o nome do 1째 jogador:"

[node name="Player2_name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 400.0
offset_right = 723.0
offset_bottom = 456.0
placeholder_text = "Digite o nome do 2째 jogador:"

[node name="Player3_name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 426.0
offset_top = 480.0
offset_right = 725.0
offset_bottom = 536.0
placeholder_text = "Digite o nome do 3째 jogador:"

[node name="Player4_name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 560.0
offset_right = 723.0
offset_bottom = 616.0
placeholder_text = "Digite o nome do 4째 jogador:"

[node name="Enter" type="Button" parent="."]
top_level = true
layout_mode = 2
offset_left = 953.0
offset_top = 561.0
offset_right = 1069.0
offset_bottom = 610.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_nl0wd")
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Enter
"

[connection signal="pressed" from="Background/2Players" to="." method="_on_2players_pressed"]
[connection signal="pressed" from="Background/3Players" to="." method="_on_4players_pressed"]
[connection signal="pressed" from="Background/4Players" to="." method="_on_3players_pressed"]
[connection signal="text_changed" from="Player1_name" to="." method="_on_player_1_name_text_changed"]
[connection signal="text_changed" from="Player2_name" to="." method="_on_player_2_name_text_changed"]
[connection signal="text_changed" from="Player3_name" to="." method="_on_player_3_name_text_changed"]
[connection signal="text_changed" from="Player4_name" to="." method="_on_player_4_name_text_changed"]
[connection signal="pressed" from="Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="Enter" to="." method="_on_4players_pressed"]
